--- a/app/src/main/res/layout/activity_tworzenie_planu.xml
+++ b/app/src/main/res/layout/activity_tworzenie_planu.xml
@@ -10,18 +10,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal">
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="5dp"
-            android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginStart="5dp">
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -64,7 +64,7 @@
                     android:layout_marginEnd="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="20dp"
-                    android:paddingLeft="10dp"
+                    android:paddingLeft="5dp"
                     android:text="@string/dost_pne"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
             </TableRow>
